syntax = "proto3";

// Messages for aperturectl â†’ cloud controller communication.
package aperture.cloud.cmd.v1;

import "aperture/policy/language/v1/policy.proto";
import "google/protobuf/empty.proto";

// CloudController describes APIs of the cloud controller from the aperturectl POV
service CloudController {
  rpc UpsertPolicy(aperture.policy.language.v1.UpsertPolicyRequest) returns (google.protobuf.Empty);
  rpc DeletePolicy(aperture.policy.language.v1.DeletePolicyRequest) returns (google.protobuf.Empty);
}
